:warning: fix article background overflow bug

--- a/src/index.css
+++ b/src/index.css
@@ -64,6 +64,7 @@ header h1 {
    ####################### */
 .article {
     position: relative;
+    overflow: hidden;
 }
 
 .article img {
